; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/b2c2/extr_flexcop-hw-filter.c_flexcop_rcv_data_ctrl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/b2c2/extr_flexcop-hw-filter.c_flexcop_rcv_data_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.flexcop_device = type { i32 }

@ctrl_208 = common dso_local global i32 0, align 4
@Rcv_Data_sig = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"rcv_data is now: '%s'\0A\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"on\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"off\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.flexcop_device*, i32)* @flexcop_rcv_data_ctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @flexcop_rcv_data_ctrl(%struct.flexcop_device* %0, i32 %1) #0 {
  %3 = alloca %struct.flexcop_device*, align 8
  %4 = alloca i32, align 4
  store %struct.flexcop_device* %0, %struct.flexcop_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @ctrl_208, align 4
  %6 = load i32, i32* @Rcv_Data_sig, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @flexcop_set_ibi_value(i32 %5, i32 %6, i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  %11 = zext i1 %10 to i64
  %12 = select i1 %10, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0)
  %13 = call i32 @deb_ts(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %12)
  ret void
}

declare dso_local i32 @flexcop_set_ibi_value(i32, i32, i32) #1

declare dso_local i32 @deb_ts(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
